# Vaccine-Certification-FYP

./: CMakeLists.txt  Doxyfile  README.md
html/: index.html  md_README.html  navtreedata.js  pages.html
html/search/: pages_0.js  searchdata.js
mobile_application/: settings.gradle
mobile_application/app/: build.gradle
mobile_application/app/src/androidTest/java/hk/hku/cs/zkpvaccinecertificate/: ExampleInstrumentedTest.java
mobile_application/app/src/main/: AndroidManifest.xml
mobile_application/app/src/main/java/hk/hku/cs/zkpvaccinecertificate/: MainActivity.java
mobile_application/app/src/main/res/values/: strings.xml  themes.xml
mobile_application/app/src/main/res/values-night/: themes.xml
mobile_application/app/src/test/java/hk/hku/cs/zkpvaccinecertificate/: ExampleUnitTest.java
mobile_application/gradle/wrapper/: gradle-wrapper.properties
server_code/: libsnark.txt
server_code/merkle/: merkleproof.cpp
src/: CMakeLists.txt  gadget_example.hpp  main.cpp  merkletree.cpp  sec_num_circuit.hpp  sec_num_gadget.hpp  sec_num_main.cpp  sec_num_snark.hpp  sha256_compression.hpp  sha256_gadget.hpp  sha256_gadget.tcc  timestamp_circuit.hpp  timestamp_main.cpp
